--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   background-color: #f1f1f1;
+  height: 100%;
 }
 .content {
   background-color: #fff;
@@ -46,4 +47,9 @@ header {
   width: 33%;
   border-radius: 50%;
   border: 4px solid #282c34;
+}
+
+#info {
+  height: calc(100vh - 110px);
+  overflow-y: auto;
 }
