Added more fields and col layout to basic info step and added footer with link to repo

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,12 @@ header {
   font-size: calc(10px + 1vmin);
   color: white;
 }
+
+footer {
+  text-align: center;
+  padding: 15px;
+}
+
 .App-link {
   color: #61dafb;
 }
