--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,13 @@
   color: white;
 }
 
+.Button {
+  padding: 15px;
+  align-self: 'flex-end';
+  float: right;
+  margin-left:500px
+}
+
 header {
   background-color: #282c34;
   text-align: center;
